--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
         DATABASE_URL: "postgresql://llmproxy:dbpassword9090@db:5432/litellm"
         STORE_MODEL_IN_DB: "True" # allows adding models to proxy via UI
+        LITELLM_MASTER_KEY: "sk-hossam16111234567890"
     env_file:
       - .env # Load local .env file
     depends_on:
