--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-LITELLM_MASTER_KEY="sk-1234"
-LITELLM_SALT_KEY="sk-1234"
+LITELLM_MASTER_KEY="sk-hossam16111234567890"
+LITELLM_SALT_KEY="sk-hossam16111234567890"
